--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY="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"
-TAVILY_API_KEY="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"
+GROQ_API_KEY=""
+TAVILY_API_KEY=""
